# ux-recon

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  DISCUSSION_BRIEF.md  README.md  SMOKE_TEST.md  findings.md  progress.md  pyproject.toml  requirements.txt  task_plan.md
.claude/: settings.local.json
config/: settings.local.yaml.example  settings.yaml  smoke_test_artificialanalysis_demo.yaml  smoke_test_artificialanalysis_register.yaml  smoke_test_ponder_ux.yaml  smoke_test_public.yaml
src/: cli.py  config.py  config_layering.py
src/agent/: engine.py  engine_executor.py  engine_finalizer.py  logger.py  state.py
src/ai/: client.py
src/analysis/: competitive_report.py  prompts.py  readable_report.py  report_text.py  synthesis_client.py  ux_report.py  ux_review.py
src/analyzer/: page_analyzer.py
src/artifacts/: inventory.py  manager.py  report.py  sitemap.py
src/browser/: authenticator.py  controller.py
src/extraction/: content_collectors.py  content_extractor.py  engine.py  evidence_normalizer.py  types.py
src/generator/: vue_generator.py
src/observer/: extractor.py  fingerprint.py  novelty.py
src/tools/: regenerate_reports.py
src/vision/: client.py  prompts.py  types.py
