[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontend-mimic"
version = "0.1.0"
description = "AI-powered website frontend analyzer and replicator"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "aiofiles>=23.0",
    "rich>=13.0",
    "click>=8.0",
    "Jinja2>=3.1",
    "cssutils>=2.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
frontend-mimic = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
