[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frontend-mimic"
version = "2.0.0"
description = "Budget-aware browser agent for autonomous website exploration and UI analysis"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "click>=8.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
frontend-mimic = "src.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"
